Added attribution and an additional live feed to iss_location.html.

--- a/Topic 7 - JavaScript APIs, callbacks and promises/Vids/ISS Project/iss_location.html
+++ b/Topic 7 - JavaScript APIs, callbacks and promises/Vids/ISS Project/iss_location.html
@@ -23,11 +23,17 @@
         <p>Date: <span id="date"></span> </p>
 
     </div>
+            <div id="map"></div>
 
-    <div id="map"></div>
+    <div id="vidFeeds">
 
-    <div id="LiveVid">
-        <iframe width="480" height="270" src="https://www.ustream.tv/embed/17074538" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
+        <div id="LiveVidDown">
+            <iframe width="480" height="270" src="https://www.ustream.tv/embed/17074538" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
+        </div>
+        <div id="LiveVidSide">
+            <iframe width="480" height="270" src="https://ustream.tv/embed/9408562" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
+        </div>
+        <p>Video feeds provided by NASA via IBM Watson's uStream</p>
     </div>
 </body>
 </html>
