--- a/Topic 8 - Intro to Vue.js/Vids/hello_vue.html
+++ b/Topic 8 - Intro to Vue.js/Vids/hello_vue.html
@@ -14,7 +14,7 @@
         <!-- Page that vue will manage -->
         <h1>Hello, Vue!</h1>
 
-        <p>{{message}}</p>
+        <p>{{messageWithExclamationPoints}}</p>
 
         <button v-on:click="addExclamation">Add !</button>
         <button v-on:click="clear">Clear</button>
@@ -29,21 +29,19 @@
                 }
             },
             methods: {
-                 addExclamation(){
-                     if (this.exclamationPoints < 3) {
-                         this.exclamationPoints++
-                         // this.message = this.message+'!'
-                     }
-                 },
+                addExclamationPoints(){
+
+                },
                 clear(){
-                     this.message = "Sup, brah?"
+                    this.message = "Sup, brah?"
                 },
                 computed: {
-                     messageWithExclamationPoints(){
-                         let messageWithPoints = this.message
-                         for (let x = 0; x < this.exclamationPoints; x++){
-                             messageWithPoints = messageWithPoints + '!'
-                         }
+                    messageWithExclamationPoints(){
+                        let messageWithPoints = this.message
+                        for (let x = 0; x < this.exclamationPoints; x++){
+                            messageWithPoints = messageWithPoints + '!'
+                        }
+                        return messageWithPoints
                      }
                 }
             }
