--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>ITEC2560_Web-Client-and-Server-Programming-Coursework Index</h1>
-<p>#TODO - Add the links</p>
-</body>
-</html>
+
+        <!DOCTYPE html>
+        <html>
+            <head>
+                <title>Index of .</title>
+                <script>
+                    function toggleFolder(evt) {
+                        var folder = evt.target.nextElementSibling;
+                        if (folder.style.display === "none") {
+                            folder.style.display = "block";
+                        } else {
+                            folder.style.display = "none";
+                        }
+                    }
+                </script>
+            </head>
+            <body>
+                <h1>Index of .</h1>
+                <ul>
+                    <li><a href="Topic 01 - Course Intro, HTML/">Topic 01 - Course Intro, HTML/</a> <ul style="display: none;"><li><a href="Topic 01 - Course Intro, HTML\.idea/">.idea/</a></li></ul></li><li><a href="Topic 02 - CSS/">Topic 02 - CSS/</a> <ul style="display: none;"><li><a href="Topic 02 - CSS\Favorites/">Favorites/</a></li><li><a href="Topic 02 - CSS\Fish/">Fish/</a></li><li><a href="Topic 02 - CSS\Intro to CSS/">Intro to CSS/</a></li></ul></li><li><a href="Topic 03 - Forms, Fonts, Colors & Bootstrap/">Topic 03 - Forms, Fonts, Colors & Bootstrap/</a> <ul style="display: none;"><li><a href="Topic 03 - Forms, Fonts, Colors & Bootstrap\Conference Form/">Conference Form/</a></li><li><a href="Topic 03 - Forms, Fonts, Colors & Bootstrap\Favorite Program/">Favorite Program/</a></li><li><a href="Topic 03 - Forms, Fonts, Colors & Bootstrap\Missle/">Missle/</a></li><li><a href="Topic 03 - Forms, Fonts, Colors & Bootstrap\Student Feedback/">Student Feedback/</a></li></ul></li><li><a href="Topic 04 - JavaScript, Events/">Topic 04 - JavaScript, Events/</a> <ul style="display: none;"><li><a href="Topic 04 - JavaScript, Events\Lab/">Lab/</a></li><li><a href="Topic 04 - JavaScript, Events\Pages from videos/">Pages from videos/</a></li></ul></li><li><a href="Topic 05 - JavaScript, JSON/">Topic 05 - JavaScript, JSON/</a> <ul style="display: none;"><li><a href="Topic 05 - JavaScript, JSON\Lab/">Lab/</a></li><li><a href="Topic 05 - JavaScript, JSON\Video Programs/">Video Programs/</a></li></ul></li><li><a href="Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/">Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/</a> <ul style="display: none;"><li><a href="Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Lab/">Lab/</a></li><li><a href="Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids/">Vids/</a></li></ul></li><li><a href="Topic 07 - JavaScript APIs, callbacks and promises/">Topic 07 - JavaScript APIs, callbacks and promises/</a> <ul style="display: none;"><li><a href="Topic 07 - JavaScript APIs, callbacks and promises\Lab/">Lab/</a></li><li><a href="Topic 07 - JavaScript APIs, callbacks and promises\Vids/">Vids/</a></li></ul></li><li><a href="Topic 08 - Intro to Vue.js/">Topic 08 - Intro to Vue.js/</a> <ul style="display: none;"><li><a href="Topic 08 - Intro to Vue.js\Lab/">Lab/</a></li><li><a href="Topic 08 - Intro to Vue.js\Vids/">Vids/</a></li></ul></li><li><a href="Topic 09 - Vue Forms and Directives/">Topic 09 - Vue Forms and Directives/</a> <ul style="display: none;"><li><a href="Topic 09 - Vue Forms and Directives\Lab/">Lab/</a></li></ul></li><li><a href="Topic 10 - Vue components/">Topic 10 - Vue components/</a> <ul style="display: none;"><li><a href="Topic 10 - Vue components\Lab/">Lab/</a></li></ul></li><li><a href="Topic 11 Vue, Express and Azure/">Topic 11 Vue, Express and Azure/</a> <ul style="display: none;"><li><a href="Topic 11 Vue, Express and Azure\Lab/">Lab/</a></li></ul></li><li><a href="Topic 12 - Databases and creating an API - Student Sign In at Azure/">Topic 12 - Databases and creating an API - Student Sign In at Azure/</a> <ul style="display: none;"><li><a href="Topic 12 - Databases and creating an API - Student Sign In at Azure\Lab/">Lab/</a></li></ul></li><li><a href="Topic 13 & 14 - 50 States/">Topic 13 & 14 - 50 States/</a> <ul style="display: none;"><li><a href="Topic 13 & 14 - 50 States\Lab/">Lab/</a></li></ul></li><li><a href="index.html">index.html</a></li>
+                </ul>
+            </body>
+        </html>
+    
