--- a/Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/Vids/index.html
+++ b/Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/Vids/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>Index of ITEC2560_Web-Client-and-Server-Programming-Coursework\Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids</title>
+    <title>Jon Koch ITEC 2560
+Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +19,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Index of ITEC2560_Web-Client-and-Server-Programming-Coursework\Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids</h1>
+    <h1>Jon Koch ITEC 2560
+Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids</h1>
     <ul class="list-group">
 
             <li class="list-group-item">
