--- a/Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/index.html
+++ b/Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-    <title>Jon Koch ITEC 2560
-Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas</title>
+    <title>Jon Koch ITEC 2560\nTopic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,8 +18,7 @@ Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas</title>
 </head>
 <body>
 <div class="container">
-    <h1>Jon Koch ITEC 2560
-Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas</h1>
+    <h1>Jon Koch ITEC 2560\nTopic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas</h1>
     <ul class="list-group">
 
             <li class="list-group-item">
