indexer.py improved, styles and bootstrap added to index files.

--- a/Topic 12 - Databases and creating an API - Student Sign In at Azure/index.html
+++ b/Topic 12 - Databases and creating an API - Student Sign In at Azure/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Jon Koch ITEC 2560\nTopic 12 - Databases and creating an API - Student Sign In at Azure</title>
+    <title>Topic 12 - Databases and creating an API - Student Sign In at Azure</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +18,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Jon Koch ITEC 2560\nTopic 12 - Databases and creating an API - Student Sign In at Azure</h1>
+    <h1>Jon Koch - ITEC 2560</h1>
+    <h2>Topic 12 - Databases and creating an API - Student Sign In at Azure</h2>
     <ul class="list-group">
 
             <li class="list-group-item">
