--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>C:\Users\jkono\WebstormProjects\ITEC2560_Web-Client-and-Server-Programming-Coursework</h1>
+    <h1>Jon Koch - ITEC 2560</h1>
+    <h2>C:\Users\jkono\WebstormProjects\ITEC2560_Web-Client-and-Server-Programming-Coursework</h2>
     <ul class="list-group">
 
             <li class="list-group-item">
