--- a/Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/Vids/chart/hello chart/index.html
+++ b/Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas/Vids/chart/hello chart/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Jon Koch ITEC 2560\nTopic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids\chart\hello chart</title>
+    <title>Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids\chart\hello chart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +18,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Jon Koch ITEC 2560\nTopic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids\chart\hello chart</h1>
+    <h1>Jon Koch - ITEC 2560</h1>
+    <h2>Topic 06 - JavaScript Libraries, Maps and Charts, and optional Canvas\Vids\chart\hello chart</h2>
     <ul class="list-group">
 
             <li class="list-group-item">
