--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>ITEC2560 Web Client and Server Programming Coursework</title>
+    <title>C:\Users\jkono\WebstormProjects\ITEC2560_Web-Client-and-Server-Programming-Coursework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
     <h1>Jon Koch - ITEC 2560</h1>
-    <h2>Web Client and Server Programming Coursework</h2>
+    <h2>C:\Users\jkono\WebstormProjects\ITEC2560_Web-Client-and-Server-Programming-Coursework</h2>
     
     <ul class="list-group">
 
