--- a/Topic 09 - Vue Forms and Directives/Lab/vue-week-2-starter-master/index.html
+++ b/Topic 09 - Vue Forms and Directives/Lab/vue-week-2-starter-master/index.html
@@ -21,7 +21,7 @@
     <h1>Jon Koch - ITEC 2560</h1>
     <h2>Topic 09 - Vue Forms and Directives\vue-week-2-starter-master</h2>
     
-            <p><a href="../index.html"><i class="fas fa-arrow-up"></i> Back to Topic 09 - Vue Forms and Directives</a></p>
+            <p><a href="../../index.html"><i class="fas fa-arrow-up"></i> Back to Topic 09 - Vue Forms and Directives</a></p>
             
     <ul class="list-group">
 
