--- a/Topic 09 - Vue Forms and Directives/Lab/index.html
+++ b/Topic 09 - Vue Forms and Directives/Lab/index.html
@@ -29,6 +29,10 @@
                 <a href="https://jon-117.github.io/ITEC2560_Web-Client-and-Server-Programming-Coursework/Topic 09 - Vue Forms and Directives/Lab/Lab - Vue Interactivity, Forms, 2-Way Binding.md"><i class="fas fa-file"></i> Lab - Vue Interactivity, Forms, 2-Way Binding.md</a>
             </li>
             
+            <li class="list-group-item">
+                <a href="https://jon-117.github.io/ITEC2560_Web-Client-and-Server-Programming-Coursework/Topic 09 - Vue Forms and Directives/Lab/vue-week-2-starter-master/index.html"><i class="fas fa-folder"></i> vue-week-2-starter-master</a>
+            </li>
+            
     </ul>
 </div>
 </body>
