--- a/Topic 09 - Vue Forms and Directives/Lab/vue-week-2-starter-master/tracker/activity.html
+++ b/Topic 09 - Vue Forms and Directives/Lab/vue-week-2-starter-master/tracker/activity.html
@@ -132,7 +132,7 @@
 
                             <!-- done - Add a table row for each of the new form inputs created.
                                         ( 'Completed' checkmark & 'Note' text field. ) -->
-                            <td> <input type="checkbox" v-model="record.completion"> </td>
+                            <td> <input disabled="true" type="checkbox" v-model="record.completion"> </td>
                             <td> {{ record.note.substring(1,39) }}... </td>
                         </tr>
 
