--- a/Topic 10 - Vue components/index.html
+++ b/Topic 10 - Vue components/index.html
@@ -28,7 +28,11 @@
             <li class="list-group-item">
                 <a href="https://jon-117.github.io/ITEC2560_Web-Client-and-Server-Programming-Coursework/Topic 10 - Vue components/Lab/index.html"><i class="fas fa-folder"></i> Lab</a>
             </li>
-            
+
+            <li class="list-group-item">
+                <a href="https://jon-117.github.io/ITEC2560_Web-Client-and-Server-Programming-Coursework/Topic 10 - Vue components/student-sign-in-vue3/src/App.vue"><i class="fas fa-folder"></i> Lab</a>
+            </li>
+
     </ul>
 </div>
 </body>
