Topic 13-14: Removed everything. Moved to separate repository: https://github.com/Jon-117/50-states

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </li>
             
             <li class="list-group-item">
-                <a href="https://jon-117.github.io/ITEC2560_Web-Client-and-Server-Programming-Coursework/Topic 13 & 14 - 50 States/index.html"><i class="fas fa-folder"></i> Topic 13 & 14 - 50 States</a>
+                <a href="https://github.com/Jon-117/50-states"><i class="fas fa-folder"></i> Topic 13 & 14 - 50 States</a>
             </li>
             
     </ul>
